--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rulay-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsnd --respawn --clear src/app.ts",
-    "build": ""
+    "build": "rimraf ./dist && tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
